--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,6 +2,10 @@
 
 <ul>
   <% @restaurants.each do |restaurant| %>
-    <li> <%= restaurant %> </li>
+    <li>
+      <%= link_to restaurant.name, restaurant_path(restaurant) %>
+    </li>
   <% end %>
 </ul>
+
+<%= link_to 'Add a restaurant', new_restaurant_path %>
